--- a/coral-theme-spectrum/src/styles/form/index.styl
+++ b/coral-theme-spectrum/src/styles/form/index.styl
@@ -197,12 +197,4 @@ $form-fieldset-line-height = 24px;
   .coral-Form-field._coral-Radio {
     display: flex;
   }
-
-  .coral-Form-fieldwrapper--singleline {
-    .coral-Form-field._coral-Checkbox,
-    .coral-Form-field._coral-Radio {
-      width: 100%;
-      float: left;
-    }
-  }
 }
